Stop horizontal scroll bars from appearing in browse menu. Added browse menu tooltips to groups/layers.

--- a/src/app/browsepanel/browsepanel.component.scss
+++ b/src/app/browsepanel/browsepanel.component.scss
@@ -1,4 +1,3 @@
-@import 'app/globals';
 @import 'app/auscope-styles';
 
 :host {
@@ -21,6 +20,7 @@
 
         .browse-menu-col {
             flex: fit-content;
+            overflow-x: hidden;
             overflow-y: auto;
         }
     }
